<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ratings">

    <TextView
        android:id="@+id/rate"
        android:layout_width="186dp"
        android:layout_height="45dp"
        android:fontFamily="@font/alef"
        android:text="@string/rating"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:id="@+id/rate_cus_name"
        android:layout_width="181dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/rate_cus_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="237dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="127dp"
        android:layout_height="26dp"
        android:hint="L.M.xxxxxxxxx"
        android:text="@string/ater_cus_add_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="241dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="75dp"
        android:layout_height="26dp"
        android:text="@string/rate_star"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="171dp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="245dp"
        android:layout_height="44dp"
        android:progressBackgroundTint="#FFDF00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289"
        tools:layout_editor_absoluteX="133dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_reviwe"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531"
        tools:layout_editor_absoluteX="32dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="358dp"
        android:layout_height="103dp"
        android:background="#E1DFDF"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Great service would recommend to anyone who is looking for a contract phone ordered online arrived next day"
        android:inputType="@string/rate_cus_feed"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="350dp" />
</androidx.constraintlayout.widget.ConstraintLayout>