<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".aboutus2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="283dp"
        android:layout_height="230dp"
        android:layout_marginBottom="408dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mobile_house_01" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="185dp"
        android:layout_height="33dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/abut_us"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="162dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="189dp"
        android:layout_height="35dp"
        android:text="@string/wel_cum"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="229dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="360dp"
        android:layout_height="102dp"
        android:fontFamily="@font/alef"
        android:text="@string/aboutus"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544"
        tools:layout_editor_absoluteX="38dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="120dp"
        android:layout_height="54dp"
        android:text="@string/aboutus_mission"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="378dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="333dp"
        android:layout_height="68dp"
        android:fontFamily="@font/alef"
        android:text="@string/about_us_mission"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="412dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="40dp"
        android:layout_height="39dp"
        app:srcCompat="@drawable/huawei_logo"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="529dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="36dp"
        android:layout_height="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icons8_apple_logo_24"
        tools:layout_editor_absoluteY="533dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="94dp"
        android:layout_height="67dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/samsung" />

</androidx.constraintlayout.widget.ConstraintLayout>