<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".update"><![CDATA[



    " />







    ]]>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:shadowColor="@color/black"
        android:shadowDx="60"
        android:shadowDy="60"
        android:shadowRadius="20"
        android:text="@string/delivery_update"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:id="@+id/cus_name"
        android:layout_width="145dp"
        android:layout_height="21dp"
        android:layout_marginBottom="24dp"
        android:text="Customer Name  :"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cus_no"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="33dp" />

    <TextView
        android:id="@+id/cus_no"
        android:layout_width="165dp"
        android:layout_height="19dp"
        android:layout_marginBottom="20dp"
        android:text="Phone Number :"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cus_address"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="33dp" />

    <TextView
        android:id="@+id/cus_address"
        android:layout_width="178dp"
        android:layout_height="21dp"
        android:text="Adderss :"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="230dp" />

    <EditText
        android:id="@+id/up_name"
        android:layout_width="189dp"
        android:layout_height="42dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/update_name"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="129dp" />

    <EditText
        android:id="@+id/up_no"
        android:layout_width="187dp"
        android:layout_height="41dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/update_no"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="173dp" />

    <EditText
        android:id="@+id/up_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/update_address"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="209dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="413dp"
        android:layout_height="375dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/fffffffffff"
        tools:layout_editor_absoluteY="285dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_update3"
        android:textColor="#020101"
        app:backgroundTint="#8295FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="288dp" />

</androidx.constraintlayout.widget.ConstraintLayout>